Fix Spatial Anchor overlay rendering (#7955)
Fix #7949.

I've split this into two separate commits because I'm not sure if the
depth test behavior is a bug or intentional. To me it looks weird
without depth test, but that's up to a reviewer to decide. The top
picture has both patches, the bottom picture has only the camera
rotation patch applied.
![Spartial Anchor
overlay](https://github.com/AppliedEnergistics/Applied-Energistics-2/assets/28407460/7424525e-c68b-4907-8cc4-663e153325cf)

---------

Co-authored-by: Sebastian Hartte <shartte@users.noreply.github.com>